--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "localtunnel": "^2.0.2",
+    "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@aws-sdk/client-s3": "^3.498.0",
+    "@aws-sdk/lib-storage": "^3.498.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "nanoid": "^5.0.4",
+    "postcss": "^8",
+    "postgres": "^3.4.3",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5",
+    "zod": "^3.22.4"
   }
 }
