videos are now concatenated after they all finish. job is succesfully updated as well in the db.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "creatomate": "^1.1.0",
     "localtunnel": "^2.0.2",
     "next": "14.1.0",
     "openai": "^4.28.0",
