--- a/package.json
+++ b/package.json
@@ -9,16 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/pg-adapter": "^0.7.1",
+    "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "creatomate": "^1.1.0",
-    "localtunnel": "^2.0.2",
-    "next": "14.1.0",
+    "lucide-react": "^0.358.0",
+    "net": "^1.0.2",
+    "next": "^14.2.0-canary.44",
+    "next-auth": "^5.0.0-beta.16",
+    "next-themes": "^0.2.1",
     "openai": "^4.28.0",
+    "perf_hooks": "^0.0.1",
+    "pg": "^8.11.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "tls": "^0.0.1",
+    "typewriter.ts": "file:../../typewriter"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.498.0",
     "@aws-sdk/lib-storage": "^3.498.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
