--- a/package.json
+++ b/package.json
@@ -21,25 +21,26 @@
     "clsx": "^2.1.0",
     "creatomate": "^1.1.0",
     "lucide-react": "^0.358.0",
-    "net": "^1.0.2",
-    "next": "^14.2.0-canary.44",
+    "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
     "next-themes": "^0.2.1",
     "openai": "^4.28.0",
     "perf_hooks": "^0.0.1",
     "pg": "^8.11.3",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tls": "^0.0.1",
-    "typewriter.ts": "file:../../typewriter"
+    "typewriter-hook": "^1.0.0"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.498.0",
     "@aws-sdk/lib-storage": "^3.498.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/pg": "^8.11.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -47,7 +48,6 @@
     "eslint-config-next": "14.1.0",
     "nanoid": "^5.0.4",
     "postcss": "^8",
-    "postgres": "^3.4.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "zod": "^3.22.4"
